flux/infrastructure/media/swiparr/ingress.yaml
# Auto-split from cluster files
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: swiparr
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: identity-sso-media-chain@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: swiparr.becklab.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: swiparr
            port:
              number: 4321
  tls:
  - hosts:
    - swiparr.becklab.cloud
    secretName: swiparr-tls
